fixed frontend style on mobile devices

--- a/frontend/sass/_large.scss
+++ b/frontend/sass/_large.scss
@@ -15,6 +15,18 @@
         background-image: url('./../img/bookcase-1869616_1920.jpg');
     }
 
+    .header__title {
+        font-size: 9rem;
+    }
+
+    .header__text {
+        font-size: 2.8rem;
+    }
+
+    .header__btn {
+        font-size: 2rem;
+    }
+
     .nav-desktop {
         display: flex;
 
@@ -42,7 +54,20 @@
     }
 
     .signup {
-        min-height: 94.5vh;
+        min-height: 94vh;
+
+        .form__box {
+            width: 550px;
+
+            form {
+                font-size: 2.5rem;
+                padding: 1.5em;
+            }
+
+            .send, .clear, .close {
+                font-size: 2rem;
+            }
+        }
     }
 
     .book-header {
