--- a/frontend/sass/_medium.scss
+++ b/frontend/sass/_medium.scss
@@ -83,9 +83,6 @@
     .signup {
         .form__box {
             width: 440px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
 
             form {
                 font-size: 2rem;
